Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -234,7 +234,7 @@ tax or estate planning. Please consult an estate planner for details regarding t
 
 							<p:commandButton value="Save" ajax="true"
 											 update=":ctoForm:tdaccordian:beneficiaryPanel"
-											 actionListener="#{tdcto.tdMasterData.saveBenefiaciaryDetails}"
+											 actionListener="#{tdcto.saveBenefiaciaryDetails}"
 											 styleClass="ui-priority-primary CommonBtnWidthSave" />
 
 
