--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -7,7 +7,7 @@
 
 	<p:tabView id="regTabV">
 
-		<p:tab title="Primary Holder">
+		<p:tab  title="#{tdcto.tdMasterData.titlePrimary}" >
 			<div class="Container80 Responsive100 MarTop5 MarCenter"
 				style="margin-bottom: 15px;">
 
