--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -117,7 +117,7 @@
         </p:panel>
         <div class="EmptyBox10"></div>
         <div class="TexAlCenter">
-            <h:outputText value="#{tcmpb.customErrorText}" styleClass="red" escape="true"
+            <h:outputText value="#{tcmpb.customErrorText}" styleClass="red" escape="false"
                           rendered="#{tcmpb.customErrorText != null}">
             </h:outputText>
         </div>
